# programming-learning

./: .gitignore  README.md  ai_小明.json  ai_老K.json  s
C/16_Games/first/: CMakeLists.txt
C/bighomework/: meisen.c  meisen1.c
C/homework/: data.txt  structfunction.c  treetop.c
C/justlearn/: output.c
C/新生赛/: test3'.c  test3.c
C_2025_07/上机/: test004.c
DSAA/: sqList.cpp
DataStructureAlgorithm/: Homework.cpp  JosephRing.cpp  LinkList.cpp  LinkList.h  LinkQueue.cpp  LinkQueue.h  LinkStack.cpp  LinkStack.h  Realize.h  SqStack.cpp  SqStack.h  main.cpp  main.h  sqList.cpp  sqList.h  tempCodeRunnerFile.cpp
DataStructureAlgorithm/JosephRing/: CyList.cpp  CyList.h  main.cpp
Python/: hellp.py
Python/ClaudeHongKongV/: README.md  ai_player.py  ai_阿强.json  game_engine.py  hkpoker_leaderboard.json  hkpoker_settings.json  main.py  trained_ai.json
Python/Paint/: tempCodeRunnerFile.py  程艺数分MA8.3.2.py  程艺数分MA8.3.9.py  程艺数分MA9.1.8.py
Python/PythonPaintAI/: 吊射角度就近归一.py
Python/RandomNumber/: main.py
Python/ReversedMatrix/: latex_renderer.py  main.py  matrix_decompositions.py  matrix_manager.py  matrix_operations.py  tempCodeRunnerFile.py
Python/deep learning/: and.py  image.py  man.py  nerual.py  (+1 more)
Typora/: cprimerplus.md
algorithm/: subarray.c
angel/: angel.c  angel.py  run_all.bat
bigbig/: app.py  index.html  index注释版  models.py  script.js  style.css
bridgeProject/: 项目报告.tex
bridge_app/: app.py
clion/: CMakeLists.txt
clionc/: CMakeLists.txt
cmd/: input
cmdLearn/: a.cpp  b.cpp  r.cpp
hongkongV/: main.py
matlab/: matlab.mat
notes/: git学习.txt
(+343 files in other folders)
